--- a/changelog.txt
+++ b/changelog.txt
@@ -34,3 +34,7 @@
  - Add inclusion guards to a header file
  - Make some clang-tidy recommended changes
  - Backfill changelog
+
+2019-7-19 v0.1.3
+ - Add threaded unescaping InputParser
+ - Add tests for threaded unescaping InputParser
