--- a/changelog.txt
+++ b/changelog.txt
@@ -38,3 +38,7 @@
 2019-7-19 v0.1.3
  - Add threaded unescaping InputParser
  - Add tests for threaded unescaping InputParser
+
+2019-9-23 v0.2.0
+ - Change formatters and parsers to be functors passed as template arguments
+ - Merge reading into associative containers
